[package]
name = "meiro_server"
version = "0.1.0"
authors = ["Kazuki Hanai <cs16075@s.inf.shizuoka.ac.jp>"]

[dependencies]
websocket = "0.20.2"
rocket = "*"
rocket_codegen = "*"
serde_json = "1.0"
lazy_static = "1.0"
rand = "0.5"
num = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]